# ai_asystent

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  requirements.txt  vercel.json
api/: backend.py  python-api.py
api-vercel/: README.md  requirements.txt  vercel.json
apps/api/: .env.example  README.md  app.py  config.py  main.py  middleware.py  pyproject.toml  requirements.txt
apps/api/api/: errors.py
apps/api/api/v1/: conversations.py  me.py  messages.py
apps/api/api/v1/admin/: __init__.py  google_oauth.py  integrations.py
apps/api/core/: __init__.py  auth.py  context.py  deps.py  secrets.py
apps/api/domain/: audit.py  chat.py  integrations.py
apps/api/schemas/: __init__.py
apps/api/services/: prompts_loader.py
apps/api/services/connectors/: __init__.py  contract.py  google_drive.py  mock_bitrix.py  registry.py  runner.py
apps/api/services/llm/: __init__.py  interface.py  mock.py  openrouter.py
apps/api/services/orchestration/: __init__.py  ask.py
apps/api/services/routing/: __init__.py  intent.py  source_selector.py
apps/api/tests/: conftest.py  test_ask_flow.py  test_llm_openrouter.py  test_tenant_isolation.py
docs/: README.md  architecture-and-product-brief.md  architecture-principles.md  architektura-diagram.html  architektura-opis-do-diagramu.md  backend-architecture.md  bitrix-outgoing-webhook-endpoint.md  chat-orchestration-design.md  connector-bitrix-design.md  connector-framework.md  deployment-vercel-supabase.md  design-system.md  documentation-proposal.md  frontend-architecture.md  implementation-status.md  (+7 more)
(+101 files in other folders)
